--- a/BinOutput/Avatar/ConfigAvatar_Yaoyao.json
+++ b/BinOutput/Avatar/ConfigAvatar_Yaoyao.json
@@ -70,7 +70,7 @@
 			"lockWeightYaxisThreshold": 2,
 			"lockWeightYaxisParam": 0.1,
 			"lockShape": "CircleLockEnemyClose",
-			"endureType": "Avatar_Sword",
+			"endureType": "Avatar_Pole",
 			"endureShake": 0
 		},
 		"beHit":
@@ -1529,6 +1529,149 @@
 					"setAnimatorBoolean": [],
 					"sheatheOnStart": true
 				},
+				"FallingAnthem_BS":
+				{
+					"$type": "ConfigAvatarStateIDInfo",
+					"addEndure": 0,
+					"animatorStates":
+					{
+						"FallingAnthem_BS_1": [],
+						"FallingAnthem_BS_2": []
+					},
+					"moveType": "combatAir",
+					"cameraType": "combatNormal",
+					"equipReattach":
+					[
+						{
+							"equip": "equip01",
+							"targetPoint": "WeaponR",
+							"normalizeStart": 0.0,
+							"normalizeEnd": 1.0
+						}
+					],
+					"resetAnimatorTriggerOnEnter": [],
+					"resetAnimatorTriggerOnExit":
+					[
+						"BeHit",
+						"DoSkill",
+						"Jump"
+					],
+					"setAnimatorBoolean": [],
+					"jumpCancelEnd": -1,
+					"actionPanelState": "Fly",
+					"animatorTriggerOnLanded": "HitAir2HitDrop",
+					"battouOnStart": true
+				},
+				"FallingAnthem_Loop":
+				{
+					"$type": "ConfigAvatarStateIDInfo",
+					"addEndure": 0,
+					"animatorStates":
+					{
+						"FallingAnthem_Loop": [],
+						"FallingAnthem_Loop_Low": []
+					},
+					"moveType": "combatAir",
+					"equipReattach":
+					[
+						{
+							"equip": "equip01",
+							"targetPoint": "WeaponR",
+							"normalizeStart": 0.0,
+							"normalizeEnd": 1.0
+						}
+					],
+					"resetAnimatorTriggerOnEnter": [],
+					"resetAnimatorTriggerOnExit":
+					[
+						"BeHit",
+						"DoSkill",
+						"Jump"
+					],
+					"setAnimatorBoolean": [],
+					"actionPanelState": "Fly",
+					"animatorTriggerOnLanded": "HitAir2HitDrop",
+					"battouOnStart": true
+				},
+				"FallingAnthem_AS_1":
+				{
+					"$type": "ConfigAvatarStateIDInfo",
+					"animatorStates":
+					{
+						"FallingAnthem_AS_1": []
+					},
+					"moveType": "combatMove",
+					"canDoSkill": true,
+					"equipReattach":
+					[
+						{
+							"equip": "equip01",
+							"targetPoint": "WeaponR",
+							"normalizeStart": 0.0,
+							"normalizeEnd": 1.0
+						}
+					],
+					"resetAnimatorTriggerOnEnter": [],
+					"resetAnimatorTriggerOnExit":
+					[
+						"BeHit",
+						"DoSkill",
+						"Jump"
+					],
+					"setAnimatorBoolean":
+					[
+						{
+							"name": "&CanUseSkill",
+							"normalizeStart": 0.6,
+							"normalizeEnd": 1.0
+						}
+					],
+					"jumpCancelEnd": -1,
+					"battouOnStart": true
+				},
+				"FallingAnthem_AS_2":
+				{
+					"$type": "ConfigAvatarStateIDInfo",
+					"animatorStates":
+					{
+						"FallingAnthem_AS_2": []
+					},
+					"moveType": "combatMove",
+					"canDoSkill": true,
+					"equipReattach":
+					[
+						{
+							"equip": "equip01",
+							"targetPoint": "WeaponR",
+							"normalizeStart": 0.0,
+							"normalizeEnd": 1.0
+						}
+					],
+					"resetAnimatorTriggerOnEnter": [],
+					"resetAnimatorTriggerOnExit":
+					[
+						"BeHit",
+						"DoSkill",
+						"Jump"
+					],
+					"setAnimatorBoolean":
+					[
+						{
+							"name": "&CanUseSkill",
+							"normalizeStart": 0.0,
+							"normalizeEnd": 1.0
+						}
+					],
+					"canChangeAvatar":
+					[
+						{
+							"normalizeStart": 0.0,
+							"normalizeEnd": 1.0
+						}
+					],
+					"jumpCancelStart": 0.1,
+					"battouOnStart": true
+				},
 				"Yaoyao_ElementalArt_Loop":
 				{
 					"$type": "ConfigAvatarStateIDInfo",
@@ -2216,6 +2359,10 @@
 		},
 		{
 			"abilityName": "Avatar_Yaoyao_ElementalBurst"
+		},
+		{
+			"abilityID": "Avatar_Yaoyao_FallingAnthem",
+			"abilityName": "Avatar_Yaoyao_FallingAnthem"
 		}
 	],
 	"audio":
