--- a/ExcelBinOutput/AvatarSkillExcelConfigData.json
+++ b/ExcelBinOutput/AvatarSkillExcelConfigData.json
@@ -1,8 +1,4 @@
 [
-    //////////////////////////////////
-    //    RES-By Sakura616#0807     //
-    //////////////////////////////////
-    //非专业人士-凑合着玩玩吧
     {
         "id": 10001,
         "nameTextMapHash": 4051912989,
@@ -6569,45 +6565,29 @@
     },
     {
         "id": 10771,
-        "nameTextMapHash": 2294046741,
-        "abilityName": "",
-        "descTextMapHash": 3288766632,
-        "skillIcon": "Avatar_Yaoyao_ExtraAttack",
-        "cdTime": 20.0,
-        "costElemType": "Grass",
-        "costElemVal": 80.0,
+        "nameTextMapHash": 403331797,
+        "abilityName": "Avatar_Yaoyao_ExtraAttack",
+        "descTextMapHash": 1838127856,
+        "skillIcon": "Skill_A_01",
         "maxChargeNum": 1,
-        "triggerID": 5,
         "lockShape": "CircleLockEnemyR5H6HC",
-        "lockWeightParams": [
-            1.0,
-            1.0,
-            0.30000001192092896,
-            0.0
-        ],
+        "lockWeightParams": [1.0, 1.0, 0.30000001192092896, 0.0],
         "isAttackCameraLock": true,
         "buffIcon": "",
-        "proudSkillGroupId": 7739,
+        "proudSkillGroupId": 7731,
         "globalValueKey": ""
     },
     {
         "id": 10772,
-        "nameTextMapHash": 2294046741,
+        "nameTextMapHash": 3738045221,
         "abilityName": "",
-        "descTextMapHash": 3288766632,
+        "descTextMapHash": 1207031736,
         "skillIcon": "Skill_S_Yaoyao_01",
-        "cdTime": 20.0,
-        "costElemType": "Grass",
-        "costElemVal": 80.0,
+        "cdTime": 15.0,
         "maxChargeNum": 1,
-        "triggerID": 5,
-        "lockShape": "CircleLockEnemyR5H6HC",
-        "lockWeightParams": [
-            1.0,
-            1.0,
-            0.30000001192092896,
-            0.0
-        ],
+        "triggerID": 2,
+        "lockShape": "CircleLockEnemyR8H6HC",
+        "lockWeightParams": [1.0, 1.0, 0.30000001192092896, 0.0],
         "isAttackCameraLock": true,
         "buffIcon": "",
         "proudSkillGroupId": 7732,
@@ -6615,22 +6595,17 @@
     },
     {
         "id": 10775,
-        "nameTextMapHash": 2294046741,
+        "nameTextMapHash": 312209645,
         "abilityName": "",
-        "descTextMapHash": 3288766632,
+        "descTextMapHash": 3855132632,
         "skillIcon": "Skill_E_Yaoyao_01",
         "cdTime": 20.0,
         "costElemType": "Grass",
         "costElemVal": 80.0,
         "maxChargeNum": 1,
         "triggerID": 5,
-        "lockShape": "CircleLockEnemyR5H6HC",
-        "lockWeightParams": [
-            1.0,
-            1.0,
-            0.30000001192092896,
-            0.0
-        ],
+        "lockShape": "CircleLockEnemyR8H6HC",
+        "lockWeightParams": [1.0, 1.0, 0.30000001192092896, 0.0],
         "isAttackCameraLock": true,
         "buffIcon": "",
         "proudSkillGroupId": 7739,
@@ -6638,45 +6613,29 @@
     },
     {
         "id": 10781,
-        "nameTextMapHash": 2294046741,
-        "abilityName": "",
-        "descTextMapHash": 3288766632,
-        "skillIcon": "Avatar_Alhatham_ExtraAttack",
-        "cdTime": 20.0,
-        "costElemType": "Grass",
-        "costElemVal": 80.0,
+        "nameTextMapHash": 4231831917,
+        "abilityName": "Avatar_Alhatham_ExtraAttack",
+        "descTextMapHash": 1536919408,
+        "skillIcon": "Skill_A_01",
         "maxChargeNum": 1,
-        "triggerID": 5,
         "lockShape": "CircleLockEnemyR5H6HC",
-        "lockWeightParams": [
-            1.0,
-            1.0,
-            0.30000001192092896,
-            0.0
-        ],
+        "lockWeightParams": [1.0, 1.0, 0.30000001192092896, 0.0],
         "isAttackCameraLock": true,
         "buffIcon": "",
-        "proudSkillGroupId": 7839,
+        "proudSkillGroupId": 7831,
         "globalValueKey": ""
     },
     {
         "id": 10782,
-        "nameTextMapHash": 2294046741,
+        "nameTextMapHash": 1674438605,
         "abilityName": "",
-        "descTextMapHash": 3288766632,
+        "descTextMapHash": 3631586904,
         "skillIcon": "Skill_S_Alhatham_01",
-        "cdTime": 20.0,
-        "costElemType": "Grass",
-        "costElemVal": 80.0,
+        "cdTime": 18.0,
         "maxChargeNum": 1,
-        "triggerID": 5,
+        "triggerID": 2,
         "lockShape": "CircleLockEnemyR15H10HC",
-        "lockWeightParams": [
-            1.0,
-            1.0,
-            0.30000001192092896,
-            0.0
-        ],
+        "lockWeightParams": [1.0, 1.0, 0.30000001192092896, 0.0],
         "isAttackCameraLock": true,
         "buffIcon": "",
         "proudSkillGroupId": 7832,
@@ -6684,22 +6643,17 @@
     },
     {
         "id": 10785,
-        "nameTextMapHash": 2294046741,
+        "nameTextMapHash": 52057253,
         "abilityName": "",
-        "descTextMapHash": 3288766632,
+        "descTextMapHash": 2446716024,
         "skillIcon": "Skill_E_Alhatham_01",
-        "cdTime": 20.0,
+        "cdTime": 18.0,
         "costElemType": "Grass",
-        "costElemVal": 80.0,
+        "costElemVal": 70.0,
         "maxChargeNum": 1,
         "triggerID": 5,
         "lockShape": "CircleLockEnemyR15H10HC",
-        "lockWeightParams": [
-            1.0,
-            1.0,
-            0.30000001192092896,
-            0.0
-        ],
+        "lockWeightParams": [1.0, 1.0, 0.30000001192092896, 0.0],
         "isAttackCameraLock": true,
         "buffIcon": "",
         "proudSkillGroupId": 7839,
