--- a/ExcelBinOutput/EmojiDataExcelConfigData.json
+++ b/ExcelBinOutput/EmojiDataExcelConfigData.json
@@ -1566,5 +1566,54 @@
         "order": 224,
         "contentTextMapHash": 3564728944,
         "icon": "UI_EmotionIcon224"
+    },
+    {
+        "id": 14017,
+        "setID": 15,
+        "order": 225,
+        "contentTextMapHash": 3564728944,
+        "icon": "UI_EmotionIcon225"
+    },
+    {
+        "id": 14018,
+        "setID": 15,
+        "order": 226,
+        "contentTextMapHash": 3564728944,
+        "icon": "UI_EmotionIcon226"
+    },
+    {
+        "id": 14019,
+        "setID": 15,
+        "order": 227,
+        "contentTextMapHash": 3564728944,
+        "icon": "UI_EmotionIcon227"
+    },
+    {
+        "id": 14020,
+        "setID": 15,
+        "order": 228,
+        "contentTextMapHash": 3564728944,
+        "icon": "UI_EmotionIcon228"
+    },
+    {
+        "id": 14021,
+        "setID": 15,
+        "order": 229,
+        "contentTextMapHash": 3564728944,
+        "icon": "UI_EmotionIcon229"
+    },
+    {
+        "id": 14022,
+        "setID": 15,
+        "order": 230,
+        "contentTextMapHash": 3564728944,
+        "icon": "UI_EmotionIcon230"
+    },
+    {
+        "id": 14023,
+        "setID": 15,
+        "order": 231,
+        "contentTextMapHash": 3564728944,
+        "icon": "UI_EmotionIcon230"
     }
 ]
