--- a/ExcelBinOutput/EmojiSetDataExcelConfigData.json
+++ b/ExcelBinOutput/EmojiSetDataExcelConfigData.json
@@ -68,5 +68,20 @@
         "id": 14,
         "order": 14,
         "icon": "UI_EmotionTagIcon_14"
+    },
+    {
+        "id": 15,
+        "order": 15,
+        "icon": "UI_EmotionTagIcon_15"
+    },
+    {
+        "id": 16,
+        "order": 16,
+        "icon": "UI_EmotionTagIcon_16"
+    },
+    {
+        "id": 17,
+        "order": 17,
+        "icon": "UI_EmotionTagIcon_16"
     }
 ]
