--- a/ExcelBinOutput/InvestigationMonsterConfigData.json
+++ b/ExcelBinOutput/InvestigationMonsterConfigData.json
@@ -1452,7 +1452,7 @@
         "id": 47,
         "cityId": 1,
         "monsterIdList": [
-            24050101
+            24050101//元能构装体
         ],
         "groupIdList": [
             133309053
@@ -1532,29 +1532,60 @@
         "occupiedQuestIdList": []
     },
     //--------------测试-3.4沙虫--------------------------//
+    //【需追踪-部分id未知】
     {
         "id": 50,
         "cityId": 1,
         "monsterIdList": [
-            26130101
+            26130101//沙虫id
         ],
         "groupIdList": [
             133314016//对应group
         ],
         "KCMFCMIEMHK": [],
         "HIAHHEHHLKC": [],
-        "LJEPGIPMAGJ": 2173582761,
-        "rewardPreviewId": 15183,
+        "LJEPGIPMAGJ": 2173682763,
+        "rewardPreviewId": 15184,
         "mapMarkCreateType": "ExtraConditions",
         "mapMarkCreateCondition": {
             "conditionType": "PlayerLevelGE",
             "conditionParam": 20
         },
         "monsterCategory": "Boss",
-        "nameTextMapHash": 3093228236,
+        "nameTextMapHash": 4270783839,
         "icon": "UI_MonsterIcon_Sandworm_01",
-        "descTextMapHash": 473918847,
-        "lockDescTextMapHash": 789620134,
+        "descTextMapHash": 473928847,
+        "lockDescTextMapHash": 789623134,
+        "occupiedQuestIdList": []
+    },
+    {
+        "id": 51,
+        "cityId": 1,
+        "monsterIdList": [
+            26100301//圣骸赤鹫id
+        ],
+        "groupIdList": [
+            133307337,
+            133313286,
+            133314043,
+            133314086,
+            133314262,
+            133314277//对应group
+        ],
+        "KCMFCMIEMHK": [],
+        "HIAHHEHHLKC": [],
+        "LJEPGIPMAGJ": 2173682763,
+        "rewardPreviewId": 15520,
+        "mapMarkCreateType": "ExtraConditions",
+        "mapMarkCreateCondition": {
+            "conditionType": "PlayerLevelGE",
+            "conditionParam": 20
+        },
+        "monsterCategory": "Elite",
+        "nameTextMapHash": 4270783839,
+        "icon": "UI_MonsterIcon_Vulture_Sacred_Fire_01",
+        "descTextMapHash": 473928847,
+        "lockDescTextMapHash": 789623134,
         "occupiedQuestIdList": []
     }
 ]
