--- a/ExcelBinOutput/AvatarSkillDepotExcelConfigData.json
+++ b/ExcelBinOutput/AvatarSkillDepotExcelConfigData.json
@@ -1,8 +1,4 @@
 [
-    //////////////////////////////////
-    //    RES-By Sakura616#0807     //
-    //////////////////////////////////
-    //非专业人士-凑合着玩玩吧
     {
         "id": 101,
         "energySkill": 10014,
@@ -3489,35 +3485,13 @@
         ],
         "skillDepotAbilityGroup": ""
     },
-    ///////瑶瑶-SkillDepot
     {
         "id": 7701,
         "energySkill": 10775,
-        "skills": [
-            10771,
-            10772,
-            0,
-            0
-        ],
-        "subSkills": [
-            10101,
-            10102,
-            10002,
-            5077010
-        ],
-        "extraAbilities": [
-            "",
-            "",
-            ""
-        ],
-        "talents": [
-            771,
-            772,
-            773,
-            774,
-            775,
-            776
-        ],
+        "skills": [10771, 10772, 0, 0],
+        "subSkills": [10101, 10102, 10002, 5077010],
+        "extraAbilities": ["", "", ""],
+        "talents": [771, 772, 773, 774, 775, 776],
         "talentStarName": "Talent_Yaoyao",
         "inherentProudSkillOpens": [
             {
@@ -3536,33 +3510,13 @@
         ],
         "skillDepotAbilityGroup": ""
     },
-    ///////艾尔海森SkillDepot
     {
         "id": 7801,
         "energySkill": 10785,
-        "skills": [
-            10781,
-            10782,
-            0,
-            0
-        ],
-        "subSkills": [
-            10101,
-            5078010
-        ],
-        "extraAbilities": [
-            "",
-            "",
-            ""
-        ],
-        "talents": [
-            781,
-            782,
-            783,
-            784,
-            785,
-            786
-        ],
+        "skills": [10781, 10782, 0, 0],
+        "subSkills": [10001, 5078010],
+        "extraAbilities": ["", "", ""],
+        "talents": [781, 782, 783, 784, 785, 786],
         "talentStarName": "Talent_Alhatham",
         "inherentProudSkillOpens": [
             {
