--- a/ExcelBinOutput/AvatarTalentExcelConfigData.json
+++ b/ExcelBinOutput/AvatarTalentExcelConfigData.json
@@ -1,8 +1,4 @@
 [
-    //////////////////////////////////
-    //    RES-By Sakura616#0807     //
-    //////////////////////////////////
-    //非专业人士-凑合着玩玩吧
     {
         "talentId": 21,
         "nameTextMapHash": 3364696049,
@@ -8776,413 +8772,144 @@
     },
     {
         "talentId": 771,
-        "nameTextMapHash": 2013089553,
-        "descTextMapHash": 1528960167,
+        "nameTextMapHash": 2088049169,
+        "descTextMapHash": 2207252855,
         "icon": "UI_Talent_S_Yaoyao_01",
-        "mainCostItemId": 1176,
+        "mainCostItemId": 1177,
         "mainCostItemCount": 1,
         "openConfig": "Yaoyao_Constellation_1",
-        "addProps": [
-            {},
-            {}
-        ],
-        "paramList": [
-            1.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0
-        ]
+        "addProps": [{},{}],
+        "paramList": [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
     },
     {
         "talentId": 772,
-        "nameTextMapHash": 4140551721,
-        "descTextMapHash": 1173832871,
+        "nameTextMapHash": 1185801489,
+        "descTextMapHash": 2615149191,
         "icon": "UI_Talent_S_Yaoyao_02",
         "prevTalent": 771,
         "mainCostItemId": 1177,
         "mainCostItemCount": 1,
         "openConfig": "Yaoyao_Constellation_2",
-        "addProps": [
-            {},
-            {}
-        ],
-        "paramList": [
-            6.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0
-        ]
+        "addProps": [{},{}],
+        "paramList": [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
     },
     {
         "talentId": 773,
-        "nameTextMapHash": 1613893961,
-        "descTextMapHash": 2257513135,
+        "nameTextMapHash": 1513031537,
+        "descTextMapHash": 2456299903,
         "icon": "UI_Talent_U_Yaoyao_01",
         "prevTalent": 772,
         "mainCostItemId": 1177,
         "mainCostItemCount": 1,
         "openConfig": "Yaoyao_Constellation_3",
-        "addProps": [
-            {},
-            {}
-        ],
-        "paramList": [
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0
-        ]
+        "addProps": [{},{}],
+        "paramList": [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
     },
     {
         "talentId": 774,
-        "nameTextMapHash": 1099441465,
-        "descTextMapHash": 2239791463,
+        "nameTextMapHash": 2674638561,
+        "descTextMapHash": 2648079719,
         "icon": "UI_Talent_S_Yaoyao_03",
         "prevTalent": 773,
         "mainCostItemId": 1177,
         "mainCostItemCount": 1,
         "openConfig": "Yaoyao_Constellation_4",
-        "addProps": [
-            {},
-            {}
-        ],
-        "paramList": [
-            2.0,
-            0.5,
-            2.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0
-        ]
+        "addProps": [{},{}],
+        "paramList": [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
     },
     {
         "talentId": 775,
-        "nameTextMapHash": 2879411097,
-        "descTextMapHash": 3222950735,
+        "nameTextMapHash": 738869801,
+        "descTextMapHash": 3407006263,
         "icon": "UI_Talent_U_Yaoyao_02",
         "prevTalent": 774,
         "mainCostItemId": 1177,
         "mainCostItemCount": 1,
         "openConfig": "Yaoyao_Constellation_5",
-        "addProps": [
-            {},
-            {}
-        ],
-        "paramList": [
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0
-        ]
+        "addProps": [{},{}],
+        "paramList": [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
     },
     {
         "talentId": 776,
-        "nameTextMapHash": 1813996249,
-        "descTextMapHash": 2194389751,
-        "icon": "UI_Talent_S_Yaoyao_04",
-        "prevTalent": 765,
-        "mainCostItemId": 1176,
-        "mainCostItemCount": 1,
-        "openConfig": "Yaoyao_Constellation_6",
-        "addProps": [
-            {},
-            {}
-        ],
-        "paramList": [
-            0.4000000059604645,
-            3.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0
-        ]
-    },
-    {
-        "talentId": 771,
-        "nameTextMapHash": 2013089553,
-        "descTextMapHash": 1528960167,
-        "icon": "UI_Talent_S_Yaoyao_01",
-        "mainCostItemId": 1176,
-        "mainCostItemCount": 1,
-        "openConfig": "Yaoyao_Constellation_1",
-        "addProps": [
-            {},
-            {}
-        ],
-        "paramList": [
-            1.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0
-        ]
-    },
-    {
-        "talentId": 772,
-        "nameTextMapHash": 4140551721,
-        "descTextMapHash": 1173832871,
-        "icon": "UI_Talent_S_Yaoyao_02",
-        "prevTalent": 771,
-        "mainCostItemId": 1177,
-        "mainCostItemCount": 1,
-        "openConfig": "Yaoyao_Constellation_2",
-        "addProps": [
-            {},
-            {}
-        ],
-        "paramList": [
-            6.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0
-        ]
-    },
-    {
-        "talentId": 773,
-        "nameTextMapHash": 1613893961,
-        "descTextMapHash": 2257513135,
-        "icon": "UI_Talent_U_Yaoyao_01",
-        "prevTalent": 772,
-        "mainCostItemId": 1177,
-        "mainCostItemCount": 1,
-        "openConfig": "Yaoyao_Constellation_3",
-        "addProps": [
-            {},
-            {}
-        ],
-        "paramList": [
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0
-        ]
-    },
-    {
-        "talentId": 774,
-        "nameTextMapHash": 1099441465,
-        "descTextMapHash": 2239791463,
-        "icon": "UI_Talent_S_Yaoyao_03",
-        "prevTalent": 773,
-        "mainCostItemId": 1177,
-        "mainCostItemCount": 1,
-        "openConfig": "Yaoyao_Constellation_4",
-        "addProps": [
-            {},
-            {}
-        ],
-        "paramList": [
-            2.0,
-            0.5,
-            2.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0
-        ]
-    },
-    {
-        "talentId": 775,
-        "nameTextMapHash": 2879411097,
-        "descTextMapHash": 3222950735,
-        "icon": "UI_Talent_U_Yaoyao_02",
-        "prevTalent": 774,
-        "mainCostItemId": 1177,
-        "mainCostItemCount": 1,
-        "openConfig": "Yaoyao_Constellation_5",
-        "addProps": [
-            {},
-            {}
-        ],
-        "paramList": [
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0
-        ]
-    },
-    {
-        "talentId": 776,
-        "nameTextMapHash": 1813996249,
-        "descTextMapHash": 2194389751,
+        "nameTextMapHash": 4046679753,
+        "descTextMapHash": 3305258887,
         "icon": "UI_Talent_S_Yaoyao_04",
         "prevTalent": 775,
         "mainCostItemId": 1177,
         "mainCostItemCount": 1,
         "openConfig": "Yaoyao_Constellation_6",
-        "addProps": [
-            {},
-            {}
-        ],
-        "paramList": [
-            0.4000000059604645,
-            3.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0
-        ]
+        "addProps": [{},{}],
+        "paramList": [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
     },
     {
         "talentId": 781,
-        "nameTextMapHash": 2013089553,
-        "descTextMapHash": 1528960167,
+        "nameTextMapHash": 1459644873,
+        "descTextMapHash": 1350239855,
         "icon": "UI_Talent_S_Alhatham_01",
-        "mainCostItemId": 1176,
+        "mainCostItemId": 1178,
         "mainCostItemCount": 1,
         "openConfig": "Alhatham_Constellation_1",
-        "addProps": [
-            {},
-            {}
-        ],
-        "paramList": [
-            1.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0
-        ]
+        "addProps": [{},{}],
+        "paramList": [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
     },
     {
         "talentId": 782,
-        "nameTextMapHash": 4140551721,
-        "descTextMapHash": 1173832871,
+        "nameTextMapHash": 3637950009,
+        "descTextMapHash": 1314977759,
         "icon": "UI_Talent_S_Alhatham_02",
         "prevTalent": 781,
         "mainCostItemId": 1178,
         "mainCostItemCount": 1,
         "openConfig": "Alhatham_Constellation_2",
-        "addProps": [
-            {},
-            {}
-        ],
-        "paramList": [
-            6.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0
-        ]
+        "addProps": [{},{}],
+        "paramList": [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
     },
     {
         "talentId": 783,
-        "nameTextMapHash": 1613893961,
-        "descTextMapHash": 2257513135,
+        "nameTextMapHash": 2621846313,
+        "descTextMapHash": 3590318815,
         "icon": "UI_Talent_U_Alhatham_01",
         "prevTalent": 782,
         "mainCostItemId": 1178,
         "mainCostItemCount": 1,
         "openConfig": "Alhatham_Constellation_3",
-        "addProps": [
-            {},
-            {}
-        ],
-        "paramList": [
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0
-        ]
+        "addProps": [{},{}],
+        "paramList": [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
     },
     {
         "talentId": 784,
-        "nameTextMapHash": 1099441465,
-        "descTextMapHash": 2239791463,
+        "nameTextMapHash": 1055939881,
+        "descTextMapHash": 2223376895,
         "icon": "UI_Talent_S_Alhatham_03",
         "prevTalent": 783,
         "mainCostItemId": 1178,
         "mainCostItemCount": 1,
         "openConfig": "Alhatham_Constellation_4",
-        "addProps": [
-            {},
-            {}
-        ],
-        "paramList": [
-            2.0,
-            0.5,
-            2.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0
-        ]
+        "addProps": [{},{}],
+        "paramList": [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
     },
     {
         "talentId": 785,
-        "nameTextMapHash": 2879411097,
-        "descTextMapHash": 3222950735,
+        "nameTextMapHash": 3387153385,
+        "descTextMapHash": 822413127,
         "icon": "UI_Talent_U_Alhatham_02",
         "prevTalent": 784,
         "mainCostItemId": 1178,
         "mainCostItemCount": 1,
         "openConfig": "Alhatham_Constellation_5",
-        "addProps": [
-            {},
-            {}
-        ],
-        "paramList": [
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0
-        ]
+        "addProps": [{},{}],
+        "paramList": [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
     },
     {
         "talentId": 786,
-        "nameTextMapHash": 1813996249,
-        "descTextMapHash": 2194389751,
+        "nameTextMapHash": 540494281,
+        "descTextMapHash": 3238715695,
         "icon": "UI_Talent_S_Alhatham_04",
         "prevTalent": 785,
         "mainCostItemId": 1178,
         "mainCostItemCount": 1,
         "openConfig": "Alhatham_Constellation_6",
-        "addProps": [
-            {},
-            {}
-        ],
-        "paramList": [
-            0.4000000059604645,
-            3.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0,
-            0.0
-        ]
+        "addProps": [{},{}],
+        "paramList": [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
     }
 ]
