--- a/BinOutput/HomeworldDefaultSave/scene2002_home_config.json
+++ b/BinOutput/HomeworldDefaultSave/scene2002_home_config.json
@@ -1,106 +1,106 @@
 {
-    "KFHBFNPDJBE": [
+    "homeBlockLists": [
         {
-            "FGIJCELCGFI": 1,
-            "BEAPOFELABD": [
+            "blockId": 1,
+            "furnitures": [
                 {
-                    "ENHNGKJBJAB": 3750102,
-                    "NGIEEIOLPPO": {
-                        "_x": 347.17779541015625,
-                        "_y": 396.3992004394531,
-                        "_z": 761.7860717773438
+                    "id": 3750102,
+                    "pos": {
+                        "x": 347.17779541015625,
+                        "y": 396.3992004394531,
+                        "z": 761.7860717773438
                     },
-                    "HEOCEHKEBFM": {
-                        "_x": -0.78774493932724,
-                        "_z": 0.616001546382904
+                    "rot": {
+                        "x": -0.78774493932724,
+                        "z": 0.616001546382904
                     },
-                    "EBKJPIEAJKB": 0
+                    "parentFurnitureIndex": 0
                 }
             ],
-            "OAMAFGAEPLH": [
+            "weekendDjinnInfoList": [
                 {
                     "pos": {
-                        "_x": 291.0,
-                        "_y": 396.3999938964844,
-                        "_z": 702.0
+                        "x": 291.0,
+                        "y": 396.3999938964844,
+                        "z": 702.0
                     },
                     "rot": {
-                        "_y": 81.0
+                        "y": 81.0
                     }
                 }
             ]
         },
         {
-            "FGIJCELCGFI": 2,
-            "OAMAFGAEPLH": [
+            "blockId": 2,
+            "weekendDjinnInfoList": [
                 {
                     "pos": {
-                        "_x": 312.0,
-                        "_y": 406.79998779296875,
-                        "_z": 594.0
+                        "x": 312.0,
+                        "y": 406.79998779296875,
+                        "z": 594.0
                     },
                     "rot": {
-                        "_y": -132.0
+                        "y": -132.0
                     }
                 }
             ]
         },
         {
-            "FGIJCELCGFI": 4,
-            "OAMAFGAEPLH": [
+            "blockId": 4,
+            "weekendDjinnInfoList": [
                 {
                     "pos": {
-                        "_x": 573.0,
-                        "_y": 459.79998779296875,
-                        "_z": 504.0
+                        "x": 573.0,
+                        "y": 459.79998779296875,
+                        "z": 504.0
                     },
                     "rot": {
-                        "_y": 140.0
+                        "y": 140.0
                     }
                 }
             ]
         },
         {
-            "FGIJCELCGFI": 3,
-            "OAMAFGAEPLH": [
+            "blockId": 3,
+            "weekendDjinnInfoList": [
                 {
                     "pos": {
-                        "_x": 497.0,
-                        "_y": 433.6000061035156,
-                        "_z": 620.1900024414062
+                        "x": 497.0,
+                        "y": 433.6000061035156,
+                        "z": 620.1900024414062
                     },
                     "rot": {
-                        "_y": 97.0
+                        "y": 97.0
                     }
                 }
             ]
         }
     ],
-    "FEDAOJMDBHN": true,
-    "IJNPADKGNKE": {
-        "_x": 334.9332275390625,
-        "_y": 397.5692138671875,
-        "_z": 771.208740234375
+    "isSetBornPos": true,
+    "bornPos": {
+        "x": 334.9332275390625,
+        "y": 397.5692138671875,
+        "z": 771.208740234375
     },
-    "IPIIGEMFLHK": {
-        "_y": 308.02471923828125
+    "bornRot": {
+        "y": 308.02471923828125
     },
-    "KNHCJKHCOAN": {
-        "ENHNGKJBJAB": 3750102,
-        "NGIEEIOLPPO": {
-            "_x": 347.17779541015625,
-            "_y": 396.3992004394531,
-            "_z": 761.7860717773438
+    "mainhouse": {
+        "id": 3750102,
+        "pos": {
+            "x": 347.17779541015625,
+            "y": 396.3992004394531,
+            "z": 761.7860717773438
         },
-        "HEOCEHKEBFM": {
-            "_y": 308.02471923828125
+        "rot": {
+            "y": 308.02471923828125
         },
-        "EBKJPIEAJKB": 1
+        "parentFurnitureIndex": 1
     },
-    "HHOLBNPIHEM": {
-        "_x": 337.58099365234375,
-        "_y": 397.919189453125,
-        "_z": 772.8577270507812
+    "djinPos": {
+        "x": 337.58099365234375,
+        "y": 397.919189453125,
+        "z": 772.8577270507812
     },
-    "GLBBIJLNNEE": 1
+    "tmpVersion": 1
 }
