--- a/BinOutput/HomeworldDefaultSave/scene2201_home_config.json
+++ b/BinOutput/HomeworldDefaultSave/scene2201_home_config.json
@@ -1,229 +1,229 @@
 {
-    "PKACPHDGGEI": [
+    "homeBlockLists": [
         {
-            "PGDPDIDJEEL": 1,
-            "MLIODLGDFHJ": [
+            "blockId": 1,
+            "persistentFurnitures": [
                 {
-                    "KMAAJJHPNBA": 360102,
-                    "DKEDNPJHBEG": 1
+                    "id": 360102,
+                    "parentFurnitureIndex": 1
                 },
                 {
-                    "KMAAJJHPNBA": 360202,
-                    "DKEDNPJHBEG": 1
+                    "id": 360202,
+                    "parentFurnitureIndex": 1
                 },
                 {
-                    "KMAAJJHPNBA": 360302,
-                    "DKEDNPJHBEG": 1
+                    "id": 360302,
+                    "parentFurnitureIndex": 1
                 }
             ]
         },
         {
-            "PGDPDIDJEEL": 2,
-            "MLIODLGDFHJ": [
+            "blockId": 2,
+            "persistentFurnitures": [
                 {
-                    "KMAAJJHPNBA": 360102,
-                    "DKEDNPJHBEG": 1
+                    "id": 360102,
+                    "parentFurnitureIndex": 1
                 },
                 {
-                    "KMAAJJHPNBA": 360202,
-                    "DKEDNPJHBEG": 1
+                    "id": 360202,
+                    "parentFurnitureIndex": 1
                 },
                 {
-                    "KMAAJJHPNBA": 360302,
-                    "DKEDNPJHBEG": 1
+                    "id": 360302,
+                    "parentFurnitureIndex": 1
                 },
                 {
-                    "KMAAJJHPNBA": 360404,
-                    "DKEDNPJHBEG": 1
+                    "id": 360404,
+                    "parentFurnitureIndex": 1
                 }
             ]
         },
         {
-            "PGDPDIDJEEL": 3,
-            "MLIODLGDFHJ": [
+            "blockId": 3,
+            "persistentFurnitures": [
                 {
-                    "KMAAJJHPNBA": 360102,
-                    "DKEDNPJHBEG": 1
+                    "id": 360102,
+                    "parentFurnitureIndex": 1
                 },
                 {
-                    "KMAAJJHPNBA": 360202,
-                    "DKEDNPJHBEG": 1
+                    "id": 360202,
+                    "parentFurnitureIndex": 1
                 },
                 {
-                    "KMAAJJHPNBA": 360302,
-                    "DKEDNPJHBEG": 1
+                    "id": 360302,
+                    "parentFurnitureIndex": 1
                 },
                 {
-                    "KMAAJJHPNBA": 360404,
-                    "DKEDNPJHBEG": 1
+                    "id": 360404,
+                    "parentFurnitureIndex": 1
                 }
             ]
         },
         {
-            "PGDPDIDJEEL": 4,
-            "MLIODLGDFHJ": [
+            "blockId": 4,
+            "persistentFurnitures": [
                 {
-                    "KMAAJJHPNBA": 360102,
-                    "DKEDNPJHBEG": 1
+                    "id": 360102,
+                    "parentFurnitureIndex": 1
                 },
                 {
-                    "KMAAJJHPNBA": 360202,
-                    "DKEDNPJHBEG": 1
+                    "id": 360202,
+                    "parentFurnitureIndex": 1
                 },
                 {
-                    "KMAAJJHPNBA": 360302,
-                    "DKEDNPJHBEG": 1
+                    "id": 360302,
+                    "parentFurnitureIndex": 1
                 },
                 {
-                    "KMAAJJHPNBA": 360404,
-                    "DKEDNPJHBEG": 1
+                    "id": 360404,
+                    "parentFurnitureIndex": 1
                 }
             ]
         },
         {
-            "PGDPDIDJEEL": 5,
-            "MLIODLGDFHJ": [
+            "blockId": 5,
+            "persistentFurnitures": [
                 {
-                    "KMAAJJHPNBA": 360102,
-                    "DKEDNPJHBEG": 1
+                    "id": 360102,
+                    "parentFurnitureIndex": 1
                 },
                 {
-                    "KMAAJJHPNBA": 360202,
-                    "DKEDNPJHBEG": 1
+                    "id": 360202,
+                    "parentFurnitureIndex": 1
                 },
                 {
-                    "KMAAJJHPNBA": 360302,
-                    "DKEDNPJHBEG": 1
+                    "id": 360302,
+                    "parentFurnitureIndex": 1
                 },
                 {
-                    "KMAAJJHPNBA": 360404,
-                    "DKEDNPJHBEG": 1
+                    "id": 360404,
+                    "parentFurnitureIndex": 1
                 }
             ]
         },
         {
-            "PGDPDIDJEEL": 6,
-            "MLIODLGDFHJ": [
+            "blockId": 6,
+            "persistentFurnitures": [
                 {
-                    "KMAAJJHPNBA": 360101,
-                    "DKEDNPJHBEG": 1
+                    "id": 360101,
+                    "parentFurnitureIndex": 1
                 },
                 {
-                    "KMAAJJHPNBA": 360201,
-                    "DKEDNPJHBEG": 1
+                    "id": 360201,
+                    "parentFurnitureIndex": 1
                 },
                 {
-                    "KMAAJJHPNBA": 360301,
-                    "DKEDNPJHBEG": 1
+                    "id": 360301,
+                    "parentFurnitureIndex": 1
                 },
                 {
-                    "KMAAJJHPNBA": 360401,
-                    "DKEDNPJHBEG": 1
+                    "id": 360401,
+                    "parentFurnitureIndex": 1
                 }
             ]
         },
         {
-            "PGDPDIDJEEL": 7,
-            "MLIODLGDFHJ": [
+            "blockId": 7,
+            "persistentFurnitures": [
                 {
-                    "KMAAJJHPNBA": 360101,
-                    "DKEDNPJHBEG": 1
+                    "id": 360101,
+                    "parentFurnitureIndex": 1
                 },
                 {
-                    "KMAAJJHPNBA": 360201,
-                    "DKEDNPJHBEG": 1
+                    "id": 360201,
+                    "parentFurnitureIndex": 1
                 },
                 {
-                    "KMAAJJHPNBA": 360301,
-                    "DKEDNPJHBEG": 1
+                    "id": 360301,
+                    "parentFurnitureIndex": 1
                 },
                 {
-                    "KMAAJJHPNBA": 360401,
-                    "DKEDNPJHBEG": 1
+                    "id": 360401,
+                    "parentFurnitureIndex": 1
                 }
             ]
         }
     ],
-    "FLAPKBNEFGB": true,
-    "MINCKHBNING": {
+    "isSetBornPos": true,
+    "bornPos": {
         "x": -12.0,
         "z": 11.0
     },
-    "NIHOJFEKFPG": [
+    "doorLists": [
         {
-            "KMAAJJHPNBA": 364302,
-            "JFKAHNCPDME": {
+            "id": 364302,
+            "pos": {
                 "x": -7.5,
                 "z": -7.5
             },
-            "LKCKOOGFDBM": {
+            "rot": {
                 "y": 90.0
             },
-            "DKEDNPJHBEG": 1
+            "parentFurnitureIndex": 1
         },
         {
-            "KMAAJJHPNBA": 364302,
-            "JFKAHNCPDME": {
+            "id": 364302,
+            "pos": {
                 "x": -5.0,
                 "z": 10.0
             },
-            "LKCKOOGFDBM": {
+            "rot": {
                 "y": 180.0
             },
-            "DKEDNPJHBEG": 1
+            "parentFurnitureIndex": 1
         },
         {
-            "KMAAJJHPNBA": 364302,
-            "JFKAHNCPDME": {
+            "id": 364302,
+            "pos": {
                 "x": 10.0,
                 "z": 5.0
             },
-            "LKCKOOGFDBM": {
+            "rot": {
                 "y": 180.0
             },
-            "DKEDNPJHBEG": 1
+            "parentFurnitureIndex": 1
         },
         {
-            "KMAAJJHPNBA": 364302,
-            "JFKAHNCPDME": {
+            "id": 364302,
+            "pos": {
                 "x": 5.0,
                 "y": 5.300000190734863,
                 "z": 10.0
             },
-            "LKCKOOGFDBM": {
+            "rot": {
                 "y": 180.0
             },
-            "DKEDNPJHBEG": 1
+            "parentFurnitureIndex": 1
         },
         {
-            "KMAAJJHPNBA": 364302,
-            "JFKAHNCPDME": {
+            "id": 364302,
+            "pos": {
                 "x": -7.5,
                 "y": 5.300000190734863,
                 "z": -7.5
             },
-            "LKCKOOGFDBM": {
+            "rot": {
                 "y": 90.0
             },
-            "DKEDNPJHBEG": 1
+            "parentFurnitureIndex": 1
         }
     ],
-    "EPGELGEFJFK": [
+    "stairLists": [
         {
-            "KMAAJJHPNBA": 364402,
-            "JFKAHNCPDME": {
+            "id": 364402,
+            "pos": {
                 "x": -10.0,
                 "y": 5.300000190734863,
                 "z": 10.0
             },
-            "DKEDNPJHBEG": 1
+            "parentFurnitureIndex": 1
         }
     ],
-    "ONIPNCJGFEJ": {},
-    "AHLLACAGGKG": {
+    "mainhouse": {},
+    "djinPos": {
         "x": -11.0,
         "y": 1.0,
         "z": 12.0
     },
-    "LCBMGAEBAJN": 1
+    "tmpVersion": 1
 }
