--- a/BinOutput/HomeworldDefaultSave/scene2003_home_config.json
+++ b/BinOutput/HomeworldDefaultSave/scene2003_home_config.json
@@ -1,99 +1,99 @@
 {
-    "KFHBFNPDJBE": [
+    "homeBlockLists": [
         {
-            "FGIJCELCGFI": 1,
-            "BEAPOFELABD": [
+            "blockId": 1,
+            "furnitures": [
                 {
-                    "ENHNGKJBJAB": 375101,
-                    "NGIEEIOLPPO": {
-                        "_x": 459.0,
-                        "_y": 229.01397705078125,
-                        "_z": 629.0
+                    "id": 375101,
+                    "pos": {
+                        "x": 459.0,
+                        "y": 229.01397705078125,
+                        "z": 629.0
                     },
-                    "HEOCEHKEBFM": {
-                        "_z": 1.0
+                    "rot": {
+                        "z": 1.0
                     },
-                    "EBKJPIEAJKB": 0
+                    "parentFurnitureIndex": 0
                 }
             ],
-            "OAMAFGAEPLH": [
+            "weekendDjinnInfoList": [
                 {
                     "pos": {
-                        "_x": 552.0,
-                        "_y": 238.10000610351562,
-                        "_z": 538.0
+                        "x": 552.0,
+                        "y": 238.10000610351562,
+                        "z": 538.0
                     },
                     "rot": {
-                        "_y": -25.0
+                        "y": -25.0
                     }
                 }
             ]
         },
         {
-            "FGIJCELCGFI": 2,
-            "OAMAFGAEPLH": [
+            "blockId": 2,
+            "weekendDjinnInfoList": [
                 {
                     "pos": {
-                        "_x": 305.0,
-                        "_y": 201.5,
-                        "_z": 574.0
+                        "x": 305.0,
+                        "y": 201.5,
+                        "z": 574.0
                     },
                     "rot": {
-                        "_y": -165.0
+                        "y": -165.0
                     }
                 }
             ]
         },
         {
-            "FGIJCELCGFI": 3,
-            "OAMAFGAEPLH": [
+            "blockId": 3,
+            "weekendDjinnInfoList": [
                 {
                     "pos": {
-                        "_x": 812.0,
-                        "_y": 201.10000610351562,
-                        "_z": 538.0
+                        "x": 812.0,
+                        "y": 201.10000610351562,
+                        "z": 538.0
                     },
                     "rot": {
-                        "_y": 73.0
+                        "y": 73.0
                     }
                 }
             ]
         },
         {
-            "FGIJCELCGFI": 4,
-            "OAMAFGAEPLH": [
+            "blockId": 4,
+            "weekendDjinnInfoList": [
                 {
                     "pos": {
-                        "_x": 756.0,
-                        "_y": 201.1999969482422,
-                        "_z": 190.0
+                        "x": 756.0,
+                        "y": 201.1999969482422,
+                        "z": 190.0
                     },
                     "rot": {
-                        "_y": 2.0
+                        "y": 2.0
                     }
                 }
             ]
         }
     ],
-    "FEDAOJMDBHN": true,
-    "IJNPADKGNKE": {
-        "_x": 458.8800048828125,
-        "_y": 230.4439697265625,
-        "_z": 640.1099853515625
+    "isSetBornPos": true,
+    "bornPos": {
+        "x": 458.8800048828125,
+        "y": 230.4439697265625,
+        "z": 640.1099853515625
     },
-    "KNHCJKHCOAN": {
-        "ENHNGKJBJAB": 375101,
-        "NGIEEIOLPPO": {
-            "_x": 459.0,
-            "_y": 229.01397705078125,
-            "_z": 629.0
+    "mainhouse": {
+        "id": 375101,
+        "pos": {
+            "x": 459.0,
+            "y": 229.01397705078125,
+            "z": 629.0
         },
-        "EBKJPIEAJKB": 1
+        "parentFurnitureIndex": 1
     },
-    "HHOLBNPIHEM": {
-        "_x": 451.80999755859375,
-        "_y": 229.59397888183594,
-        "_z": 640.9199829101562
+    "djinPos": {
+        "x": 451.80999755859375,
+        "y": 229.59397888183594,
+        "z": 640.9199829101562
     },
-    "GLBBIJLNNEE": 1
+    "tmpVersion": 1
 }
