--- a/BinOutput/HomeworldDefaultSave/scene2004_home_config.json
+++ b/BinOutput/HomeworldDefaultSave/scene2004_home_config.json
@@ -1,105 +1,105 @@
 {
-    "KFHBFNPDJBE": [
+    "homeBlockLists": [
         {
-            "FGIJCELCGFI": 1,
-            "BEAPOFELABD": [
+            "blockId": 1,
+            "furnitures": [
                 {
-                    "ENHNGKJBJAB": 375103,
-                    "NGIEEIOLPPO": {
-                        "_x": 259.0400085449219,
-                        "_y": 186.53700256347656,
-                        "_z": 540.780029296875
+                    "id": 375103,
+                    "pos": {
+                        "x": 259.0400085449219,
+                        "y": 186.53700256347656,
+                        "z": 540.780029296875
                     },
-                    "HEOCEHKEBFM": {
-                        "_y": 90.0
+                    "rot": {
+                        "y": 90.0
                     },
-                    "EBKJPIEAJKB": 0
+                    "parentFurnitureIndex": 0
                 }
             ],
-            "OAMAFGAEPLH": [
+            "weekendDjinnInfoList": [
                 {
                     "pos": {
-                        "_x": 170.3699951171875,
-                        "_y": 206.6199951171875,
-                        "_z": 568.6699829101562
+                        "x": 170.3699951171875,
+                        "y": 206.6199951171875,
+                        "z": 568.6699829101562
                     },
                     "rot": {
-                        "_y": -47.810001373291016
+                        "y": -47.810001373291016
                     }
                 }
             ]
         },
         {
-            "FGIJCELCGFI": 2,
-            "OAMAFGAEPLH": [
+            "blockId": 2,
+            "weekendDjinnInfoList": [
                 {
                     "pos": {
-                        "_x": 295.25,
-                        "_y": 204.0800018310547,
-                        "_z": 404.260009765625
+                        "x": 295.25,
+                        "y": 204.0800018310547,
+                        "z": 404.260009765625
                     },
                     "rot": {
-                        "_y": -64.30000305175781
+                        "y": -64.30000305175781
                     }
                 }
             ]
         },
         {
-            "FGIJCELCGFI": 3,
-            "OAMAFGAEPLH": [
+            "blockId": 3,
+            "weekendDjinnInfoList": [
                 {
                     "pos": {
-                        "_x": 620.760009765625,
-                        "_y": 204.3699951171875,
-                        "_z": 407.6000061035156
+                        "x": 620.760009765625,
+                        "y": 204.3699951171875,
+                        "z": 407.6000061035156
                     },
                     "rot": {
-                        "_y": -32.2400016784668
+                        "y": -32.2400016784668
                     }
                 }
             ]
         },
         {
-            "FGIJCELCGFI": 4,
-            "OAMAFGAEPLH": [
+            "blockId": 4,
+            "weekendDjinnInfoList": [
                 {
                     "pos": {
-                        "_x": 777.4199829101562,
-                        "_y": 205.22000122070312,
-                        "_z": 648.6400146484375
+                        "x": 777.4199829101562,
+                        "y": 205.22000122070312,
+                        "z": 648.6400146484375
                     },
                     "rot": {
-                        "_y": -36.599998474121094
+                        "y": -36.599998474121094
                     }
                 }
             ]
         }
     ],
-    "FEDAOJMDBHN": true,
-    "IJNPADKGNKE": {
-        "_x": 273.0,
-        "_y": 186.0,
-        "_z": 540.0
+    "isSetBornPos": true,
+    "bornPos": {
+        "x": 273.0,
+        "y": 186.0,
+        "z": 540.0
     },
-    "IPIIGEMFLHK": {
-        "_y": 128.0
+    "bornRot": {
+        "y": 128.0
     },
-    "KNHCJKHCOAN": {
-        "ENHNGKJBJAB": 375103,
-        "NGIEEIOLPPO": {
-            "_x": 259.0400085449219,
-            "_y": 186.53700256347656,
-            "_z": 540.780029296875
+    "mainhouse": {
+        "id": 375103,
+        "pos": {
+            "x": 259.0400085449219,
+            "y": 186.53700256347656,
+            "z": 540.780029296875
         },
-        "HEOCEHKEBFM": {
-            "_y": 90.0
+        "rot": {
+            "y": 90.0
         },
-        "EBKJPIEAJKB": 1
+        "parentFurnitureIndex": 1
     },
-    "HHOLBNPIHEM": {
-        "_x": 268.5,
-        "_y": 186.0,
-        "_z": 551.0
+    "djinPos": {
+        "x": 268.5,
+        "y": 186.0,
+        "z": 551.0
     },
-    "GLBBIJLNNEE": 3
+    "tmpVersion": 3
 }
